# moshi-rag

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  setup.sh  swarm-config.yaml
.github/actions/moshi_build/: action.yml
.github/actions/rust_build/: action.yml
.github/workflows/: precommit.yml  rust-ci.yml
client/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
client/src/: index.css
client/src/protocol/: encoder.ts  (+1 more)
configs/: moshirag.json
moshi/: Dockerfile  Dockerfile.arc_encoder  config-rag.json  pyproject.toml
moshi/moshi/: run_inference.py  server.py  server_conditioner.py
moshi/moshi/conditioners/: arc_encoder.py  base.py  text.py
moshi/moshi/evaluate/: README.md  evaluate.py  profiler.py  score.py  utils.py
moshi/moshi/evaluate/judge/: __init__.py  base.py  duplex.py  math_qa.py  open_audio_bench.py  simple_qa.py
moshi/moshi/evaluate/judge/assets/: behavior_prompt.txt  icc_gt_distribution.json
moshi/moshi/inference_utils/: __init__.py  audio_processor.py  batch_runner.py  channel.py  inference_job.py  rag_manager.py  retrieval_profiles.py  turn_manager.py  utils.py
moshi/moshi/llm/: __init__.py  client.py  reference_prompt_template.txt  reference_prompt_template_simplified.txt  reference_summarization_prompt_template.txt  utils.py
moshi/moshi/models/: compression.py  lm.py  loaders.py
moshi/moshi/reference/: __init__.py  llm_reference_generator.py
moshi/moshi/stt/: __init__.py  gradium_stt.py  local_stt.py  stt.py
rust/: Cargo.toml  Dockerfile  README.md
rust/moshi-backend/: Cargo.toml  config.json
rust/moshi-core/: Cargo.toml
scripts/: import_pytorch.py  import_rust_lora.py  update_repo.py
(+44 files in other folders)
